added support for build under JDK16